# glibcurl

./: CMakeLists.txt  README.md
files/pkgconfig/: glibcurl.pc.in
include/public/: glibcurl.h
src/: glibcurl.cpp  glibcurlExports.map
